# schemes-agent-using-adk

./: .gitignore  CONNECT_DATASTORE.md  HOW_TO_ADD_CATEGORIES.md  README.md  SETUP_CHECKLIST.md  arch.md  debug_datastore_connection.py  help.txt  install_and_test.bat  pyproject.toml  requirements.txt  test_agents.py  test_available_models.py  test_connection.py  vertex-ai-471611-f5c925c60849.json
config/: categories.py  settings.py
src/: app.py
src/agents/: farmer_agent.py  farmer_agent_old.py  master_agent.py  master_agent_old.py  msme_agent.py  msme_agent_old.py  tools.py
src/models/: schemas.py
src/services/: mock_vertex_search.py  state_service.py  vertex_search.py
